[package]
name = "git-sub-rebase"
version = "0.1.0"
authors = ["Glenn Smith <glenn@vector35.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "^0.14.2", features = ["vendored-libgit2"] }
libgit2-sys = "0.13.4+1.4.2"
anyhow = { version = "1.0", features = ["backtrace"] }
structopt = "0.3"
chrono = "0.4"
ctrlc = "3.2"